argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.local  # 로컬 도메인 설정
      # 실제 도메인 설정을 사용하려면 위의 도메인을 주석 처리하고 아래 도메인을 사용
      # host: argocd.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd.local  # 로컬 도메인 설정
      # 실제 도메인 설정을 사용하려면 위의 도메인을 주석 처리하고 아래 도메인을 사용
      # - argocd.example.com
      secretName: argocd-tls
